# android_of_theseus

./: .gitignore  README.md
experiment/: 2023_apks.sha256  check_collisions.py  check_runtimedata.py  compare.sh  compare_callgraphs.py  download_apk.sh  frida_collect.sh  get_app_runtime_result_distribution.py  orchestrator.py  patch_apk.sh  run_dyn_analysis.sh
frida/: .gitignore  README.md  pyproject.toml
frida/consumer/: StackConsumer.java  build.sh
frida/theseus_frida/: StackConsumer.dex.b64  __init__.py  app_exploration.py  hook.js  setup_frida.py
matplotlib/: README.md  pyproject.toml
patcher/: Cargo.toml  tst.sh
patcher/src/: code_analysis.rs  code_loading_patcher.rs  dex_types.rs  get_apk.rs  lib.rs  main.rs  reflection_patcher.rs  register_manipulation.rs  runtime_data.rs
patcher/tst/: runtime.json
patcher/tst/dex/: PathClassLoader_0354b7e2_09d17bb5de42d5d9.bytecode
test_apks/: README.md
test_apks/dyn_and_ref/: .gitignore  AndroidManifest.xml  Makefile
test_apks/dyn_and_ref/java/a/com/example/theseus/dynandref/: AIReflectee.java  AMain.java  APReflectee.java  AReflectee.java  Collider.java  PCollider.java  PCommonParent.java
test_apks/dyn_and_ref/java/classes/com/example/theseus/: Utils.java
test_apks/dyn_and_ref/java/classes/com/example/theseus/dynandref/: ClassLoaderContextActivity.java  Collider.java  CollisionWithParentDelegateLastClassLoaderActivity.java  CollisionWithParentDexClassLoaderActivity.java  CollisionWithParentInMemoryDexClassLoaderActivity.java  CollisionWithParentPathClassLoaderActivity.java  CollisionWithoutParentDelegateLastClassLoaderActivity.java  CollisionWithoutParentDexClassLoaderActivity.java  CollisionWithoutParentInMemoryDexClassLoaderActivity.java  CollisionWithoutParentPathClassLoaderActivity.java  DelegateLastClassLoaderActivity.java  DexClassLoaderActivity.java  ICollider.java  ICommonInterface.java  InMemoryDexClassLoaderActivity.java  Main.java  MainActivity.java  MainIReflectee.java  MainPReflectee.java  MainReflectee.java  MethodActivity.java  NoCollisionWithParentDelegateLastClassLoaderActivity.java  NoCollisionWithParentDexClassLoaderActivity.java  NoCollisionWithParentInMemoryDexClassLoaderActivity.java  NoCollisionWithParentPathClassLoaderActivity.java  NoCollisionWithoutParentDelegateLastClassLoaderActivity.java  NoCollisionWithoutParentDexClassLoaderActivity.java  NoCollisionWithoutParentInMemoryDexClassLoaderActivity.java  NoCollisionWithoutParentPathClassLoaderActivity.java  PCollider.java  PCommonParent.java  PathClassLoaderActivity.java
test_apks/dyn_and_ref/tests/: expected_result.txt  test_apk.py
test_apks/dynloading/: .gitignore  AndroidManifest.xml  Makefile
test_apks/dynloading/java/a/com/example/theseus/dynloading/: AMain.java  Collider.java
test_apks/dynloading/java/classes/com/example/theseus/: Utils.java
test_apks/dynloading/java/classes/com/example/theseus/dynloading/: Collider.java  MainActivity.java
test_apks/reflection/: .gitignore  AndroidManifest.xml  Makefile  ref_data.json
test_apks/reflection/java/classes/com/example/theseus/reflection/: ChildReflectee.java  IReflectee.java  MainActivity.java  Reflectee.java  Utils.java
test_apks/reflection/soot_test/: source_sink.txt  test.sh
test_apks/simple_demo/: AndroidManifest.xml  Makefile  source_sink.txt
test_apks/simple_demo/java/classes/com/example/theseus/: Main.java  MainActivity.java  Utils.java
test_apks/simple_demo/java/inline/com/example/theseus/: Malicious.java
test_apks/tests/: AndroidManifest.xml  Makefile
test_apks/tests/java/classes/com/example/theseus/tests/: MainActivity.java  Reflectee.java  Utils.java
theseus_autopatcher/: .gitignore  README.md  build.sh  pyproject.toml  test.sh
theseus_autopatcher/src/theseus_autopatcher/: __init__.py  patcher_86_64_musl  utils.py
