[project]
name = "theseus-autopatcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Jean-Marie MINEAU",email = "jean-marie.mineau@centralesupelec.fr"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
#dependencies = []

[tool.poetry.dependencies]
theseus-frida = { path = "../frida" }
matplotlib = { path = "../matplotlib" }
grodd-runner = {git = "ssh://git@gitlab.inria.fr/CIDRE/malware/grodd-runner.git", optional = true}

[tool.poetry.extras]
grodd = ["grodd-runner"]

[tool.poetry]
packages = [{include = "theseus_autopatcher", from = "src"}]
include = [
  { path = "src/theseus_autopatcher/patcher_86_64_musl", format = ["sdist", "wheel"] },
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
theseus-autopatch = 'theseus_autopatcher.__init__:main'
